--- a/app/src/main/res/layout/activity_setting_page.xml
+++ b/app/src/main/res/layout/activity_setting_page.xml
@@ -31,6 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/uS_et_title"
+            android:textColor="@android:color/white"
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/uS_lbl_title"
             android:layout_toEndOf="@+id/uS_lbl_title"
